@@ -631,10 +631,14 @@ sub add_common_rules() {
 		my $base     = uc chain_base $interface;
 		my $variable = get_interface_gateway $interface;
 
-		add_commands( $chainref, 
-			      qq(if [ -n "\$${base}_IS_USABLE" -a -n "$variable" ]; then) ,
-			      qq(    echo -A $chainref->{name} -i $interface -s $variable -p udp -j ACCEPT >&3) ,
-			      qq(fi) );
+		if ( interface_is_optional $interface ) {
+		    add_commands( $chainref, 
+				  qq(if [ -n "\$${base}_IS_USABLE" -a -n "$variable" ]; then) ,
+				  qq(    echo -A $chainref->{name} -i $interface -s $variable -p udp -j ACCEPT >&3) ,
+				  qq(fi) );
+		} else {
+		    add_commands( $chainref, qq(echo -A $chainref->{name} -i $interface -s $variable -p udp -j ACCEPT >&3) );
+		}
 	    }
 	}
     }
