@@ -185,6 +185,9 @@ Shorewall 4.4.0
 4)  Given that Jozsef Kadlecsik has not yet released ipset 3.1, ipset
     bindings are once again supported.
 
+5)  The 'upnpclient' option only worked correctly if 'optional' was
+    also specified for the interface.
+
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
 ----------------------------------------------------------------------------
